--- a/src/app/components/molecules/AboutUs/AboutUs.css
+++ b/src/app/components/molecules/AboutUs/AboutUs.css
@@ -1,12 +1,12 @@
 .AboutUs {
     @media screen and (min-width: 1024px) {
-        padding-top: 6rem;
-        padding-bottom: 6rem;
-        justify-content: space-between;
+        padding-top: 15vh;
+        padding-bottom: 15vh;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
+        height: 70vh;
         width: 50%;
-        height: 100%;
         position: sticky;
         top: 0;
     }
