--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,11 +8,12 @@
 
 body { 
   background-color: var(--black);
+  margin: 0;
 }
 
 .PageContainer {
-  margin-left: 6rem;
-  margin-right: 6rem;
+  margin-left: 15vw;
+  margin-right: 15vw;
 }
 
 .PageContent { 
