--- a/src/app/components/molecules/NavLinks/NavLinks.css
+++ b/src/app/components/molecules/NavLinks/NavLinks.css
@@ -34,3 +34,12 @@
     color: white;
 }
 
+.NavLinks--activeLink {
+    color: white;
+}
+
+.NavLinks--activeBar {
+    width: 4rem;
+    background-color: white;
+}
+
