added timeline link styling

--- a/src/app/components/molecules/Timeline/Timeline.css
+++ b/src/app/components/molecules/Timeline/Timeline.css
@@ -20,6 +20,12 @@
     color: var(--light-gray);
 }
 
+.Timeline__header {
+    display: flex;
+    gap: .25rem;
+    transition: .3s;
+}
+
 .Timeline__header > a { 
     color: var(--spot-green);
     text-decoration: none;
