created mobile styles

--- a/src/app/components/molecules/Timeline/Timeline.css
+++ b/src/app/components/molecules/Timeline/Timeline.css
@@ -3,6 +3,10 @@
     gap: 2rem;
     justify-content: space-between;
     overflow: auto;
+
+    @media (max-width: 1024px) {
+        flex-direction: column;
+    }
 }
 
 .Timeline {
@@ -36,4 +40,8 @@
     color: var(--light-gray);
     font-size: 1rem;
     max-width: 20rem;
+    
+    @media (max-width: 1024px) {
+        max-width: unset;
+    }
 }
