--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,4 +20,8 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
+  
+  @media (max-width: 1024px) {
+    flex-direction: column;
+  }
 }
