--- a/src/app/components/molecules/AboutUs/AboutUs.css
+++ b/src/app/components/molecules/AboutUs/AboutUs.css
@@ -1,14 +1,17 @@
 .AboutUs {
-    @media screen and (min-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 70vh;
+    width: 50%;
+    position: sticky;
+    top: 0;
+
+    @media (max-width: 1024px) {
         padding-top: 15vh;
-        padding-bottom: 15vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 70vh;
-        width: 50%;
-        position: sticky;
-        top: 0;
+        height: 100%;
+        position: unset;
+        width: unset;
     }
 }
 
