--- a/src/app/components/molecules/NavLinks/NavLinks.css
+++ b/src/app/components/molecules/NavLinks/NavLinks.css
@@ -2,6 +2,10 @@
     margin-top: 4rem;
     list-style: none;
     padding: 0;
+
+    @media (max-width: 1024px) {
+        display: none;
+    }
 }
 
 .NavLinks--link {
