--- a/src/app/components/molecules/ScrollView/ScrollView.css
+++ b/src/app/components/molecules/ScrollView/ScrollView.css
@@ -4,11 +4,19 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+
+    @media (max-width: 1024px) {
+        width: unset;
+    }
 }
 
 .ScrollView__desc {
     color: var(--light-gray);
     margin-bottom: 9rem;
+
+    @media (max-width: 1024px) {
+        margin-bottom: 6rem;
+    }
 }
 
 .ScrollView__timeline {
@@ -16,6 +24,10 @@
     flex-direction: column;
     gap: 1rem;
     margin-bottom: 9rem;
+
+    @media (max-width: 1024px) {
+        margin-bottom: 6rem;
+    }
 }
 
 .ScrollView__projects {
@@ -23,4 +35,29 @@
     flex-direction: column;
     gap: 1rem;
     margin-bottom: 9rem;
+
+    @media (max-width: 1024px) {
+        margin-bottom: 6rem;
+    }
+}
+
+.ScrollView__section {
+    display: none;
+
+    @media (max-width: 1024px) {
+        display: flex;
+        align-items: center;
+        margin-bottom: 1rem;
+    }
+}
+
+.ScrollView__sectionHeaderBar {
+    width: 4rem;
+    height: 1px;
+    background-color: white;
+    margin-right: 1rem;
+}
+
+.ScrollView__sectionHeaderText {
+    color: white;
 }
