--- a/src/app/components/molecules/AboutUs/AboutUs.css
+++ b/src/app/components/molecules/AboutUs/AboutUs.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
     height: 70vh;
     width: 50%;
     position: sticky;
